# project-kp-brin

./: .gitignore  CMakeLists.txt  README.md
custom_msg/: CMakeLists.txt  package.xml
custom_msg/msg/: yolo.msg
data_kp/: npid10.txt  npid20.txt  npid5.txt  pid10.txt  pid20.txt  pid5.txt  plot.py  tpid10.txt  tpid20.txt  tpid5.txt
dynamixel-workbench/dynamixel_workbench_controllers/: CMakeLists.txt
dynamixel-workbench/dynamixel_workbench_controllers/config/: basic.yaml  joint_2_0.yaml  wheel_2_0.yaml
dynamixel-workbench/dynamixel_workbench_controllers/include/dynamixel_workbench_controllers/: dynamixel_workbench_controllers.h
dynamixel-workbench/dynamixel_workbench_controllers/launch/: dynamixel.launch  dynamixel_controllers.launch
dynamixel-workbench/dynamixel_workbench_controllers/src/: coba.cpp  dynamixel_workbench_controllers.cpp  find_dynamixel.cpp
dynamixel-workbench/dynamixel_workbench_toolbox/examples/: CMakeLists.txt
dynamixel-workbench/dynamixel_workbench_toolbox/include/dynamixel_workbench_toolbox/: dynamixel_item.h
dynamixel-workbench/dynamixel_workbench_toolbox/src/dynamixel_workbench_toolbox/: dynamixel_driver.cpp  dynamixel_item.cpp  dynamixel_tool.cpp  dynamixel_workbench.cpp
gpio/: CMakeLists.txt  package.xml
gpio/src/: gpio.cpp
keyboard/: CMakeLists.txt  package.xml
keyboard/msg/: keyb.msg
keyboard/src/: key.cpp  key_sub.cpp
nav_goal/: CMakeLists.txt  package.xml
nav_goal/src/: nav_goal.cpp
nav_path_closest/: CMakeLists.txt  package.xml
nav_path_closest/src/: nav_path_closest.cpp
nlp_ws/nlp/: CMakeLists.txt  package.xml  setup.py
nlp_ws/nlp/launch/: nlp.launch
nlp_ws/nlp/src/: CMakeLists.txt  TensorRTBert.cpp  cara_compile.txt  com.py  com_gajalan.py  response.json  tes.py  tes_.py  tese.py
nlp_ws/nlp/src/utils/: coba_trt.py
pointcloud_test/: CMakeLists.txt  package.xml
pointcloud_test/src/: get_pc.cpp
realsense-ros/realsense2_camera/launch/: rs_camera.launch
turtlebot3_ws/: frames.gv
turtlebot3_ws/rplidar_ros/launch/: rplidar_a2m8.launch
turtlebot3_ws/rplidar_ros/src/: node.cpp
turtlebot3_ws/tf_broadcaster/: CMakeLists.txt  package.xml
turtlebot3_ws/tf_broadcaster/src/: tf_broadcaster.cpp
turtlebot3_ws/turtlebot3/turtlebot3_navigation/launch/: dwa_only.launch
yolov5-tensorrt/: CMakeLists.txt  package.xml  run.py
(+2 files in other folders)
